<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calc_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/orbitron_bold"
        android:text="@string/text_default"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.85" />

    <LinearLayout
        android:id="@+id/layout_main_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/results"
        app:layout_constraintWidth_percent="0.85">

        <Button
            android:id="@+id/button_delete"
            style="@style/calc_main_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#502222"
            android:text="@string/btn_C" />

        <Button
            android:id="@+id/button_to_memory"
            style="@style/calc_main_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_mem"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_insert"
            style="@style/calc_main_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_ins"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_numbers_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_main_buttons"
        app:layout_constraintWidth_percent="0.85">

        <Button
            android:id="@+id/button_1"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/button_2"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/button_3"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/button7"
            style="@style/calc_actions_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_plus" />

        <Button
            android:id="@+id/button20"
            style="@style/calc_actions_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_x" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_numbers_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_numbers_1"
        app:layout_constraintWidth_percent="0.85">

        <Button
            android:id="@+id/button8"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/button9"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_5" />

        <Button
            android:id="@+id/button10"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_6" />

        <Button
            android:id="@+id/button11"
            style="@style/calc_actions_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_minus" />

        <Button
            android:id="@+id/button21"
            style="@style/calc_actions_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_divide" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_numbers_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_numbers_2"
        app:layout_constraintWidth_percent="0.85">

        <Button
            android:id="@+id/button12"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_7" />

        <Button
            android:id="@+id/button13"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_8" />

        <Button
            android:id="@+id/button14"
            style="@style/calc_number_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_9" />

        <Button
            android:id="@+id/button15"
            style="@style/calc_actions_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_root" />

        <Button
            android:id="@+id/button22"
            style="@style/calc_actions_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_xx" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_numbers_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_numbers_3"
        app:layout_constraintWidth_percent="0.85">

        <Button
            android:id="@+id/button16"
            style="@style/calc_number_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/btn_0" />

        <Button
            android:id="@+id/button17"
            style="@style/calc_number_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FF504545"
            android:text="@string/btn_dot" />

        <Button
            android:id="@+id/button19"
            style="@style/calc_actions_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/btn_equals" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>